--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+    --fonte01: verdana, geneva, tahoma, sans-serif;
+    --fonte02: 'Passion One', sans-serif;
+    --fonte03: 'Sriracha', cursive;
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -8,6 +18,7 @@
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte01);
 }
 
 header{
@@ -17,8 +28,10 @@ header{
 }
 
 header > h1{
+    font-family: var(--fonte02);
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
 }
 
 header > p{
@@ -40,6 +53,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte03);
+    font-size: 4.5em;
 }
 
 section.normal{
@@ -52,8 +67,9 @@ section.imagem{
 }
 
 section.imagem > p{
+    display: inline-block;
     background-color: rgba(0, 0, 0, 0.234);
-    width: 400px;
+    padding: 5px;
 }
 
 
