--- a/style/style.css
+++ b/style/style.css
@@ -54,7 +54,12 @@ section{
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte03);
-    font-size: 4.5em;
+    font-size: 4.5vw;
+}
+
+section > p{
+    padding-bottom: 2em;
+    margin-left: 15vw;
 }
 
 section.normal{
@@ -63,13 +68,31 @@ section.normal{
 }
 
 section.imagem{
-    background-color: antiquewhite;
+    background-color: rgba(0, 0, 0, 0.51);
+    color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.54);
+    background-attachment: fixed;
+    }
+
+section#img01{
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02{
+    background-image: url(../imagens/background002.jpg);
+    background-size: cover;
 }
 
 section.imagem > p{
     display: inline-block;
-    background-color: rgba(0, 0, 0, 0.234);
+    background-color: rgba(0, 0, 0, 0.51);
     padding: 5px;
+    text-shadow: 1px 1px 0px;
+    border: 0px;
+    border-radius: 30px;
+    box-shadow: 3px 3px 5px rgba(128, 128, 128, 0.503);
 }
 
 
