--- a/style/style.css
+++ b/style/style.css
@@ -89,7 +89,7 @@ section.imagem > p{
     display: inline-block;
     background-color: rgba(0, 0, 0, 0.51);
     padding: 5px;
-    text-shadow: 1px 1px 0px;
+    text-shadow: 1px 1px 0px black;
     border: 0px;
     border-radius: 30px;
     box-shadow: 3px 3px 5px rgba(128, 128, 128, 0.503);
